Changes towards version 0.7:
- Unix build scripts now work under LC_CTYPE=tr_TR - SvdB
- Flush write buffer when doing a uio_fclose() after doing only
  uio_fwrite() operations. - SvdB
- Major rewrite of the SwapBuffers commands -- screen compositing logic 
  has all been abstracted out into sdl_common.c instead of being 
  nearly-duplicated in opengl.c and pure.c - Michael

0.6.1 (maintenance release):
- The Unicode Private Use Area is no longer considered printable.  This 
  is a stopgap to handle unusual behavior with text entry under OS X.  
  See bug #942 for more details - Michael
- Do not rely on GL_UNPACK_SKIP_* arguments, which some OpenGL drivers 
  mishandle (Bug #914) - Michael
- Do not overwrite GLOBAL_SIS (CrewEnlisted) when leaving Hyperspace 
  (Bug #938) - Michael
- Fixed a text entry width problem that was deleting control template 
  names (Bug #947) - Michael
- uio cleanups, documentation - SvdB
- uio path parsing fixes/improvements - SvdB
  - Windows UNC path support (#907)
  - Windows drive-relative paths ("D:path" without a path seperator)
  - treat multiple consecutive path seperators as one (like POSIX)
- config dir no longer needs trailing path seperator (bug #738)- SvdB
- Simplification of uio Stream functions. No more internal seeks. - SvdB
	
0.6.0:
- Fixed a bug where an input delay was used for non-network games - SvdB
- Fixed a bug where the victory ditty would end prematurely when UQM
  is compiled without Netplay support - SvdB
- Take $CFLAGS and $LDFLAGS into account for dependency detection
  (they were already used for the building itself) - SvdB
- Validate UQM version of either side of a Netplay game - SvdB
- Better abort and disconnect handling for Netplay - SvdB
- Menu sounds in Setup track rest of game (#922), from Nic - Michael
- Shifted the Mouse Error to a Popup Window, moved the message to
  starcon.txt for translators - Michael
- Generic DoPopupWindow() command for status messages - Michael