@@ -1,4 +1,7 @@
 Changes towards version 0.7:
+- No longer depend on SDLK_LAST statically; key input should now be safe 
+  if compiled with a different version of SDL than the one running the 
+  program (Bug #936, possibly also #883) - Michael
 - Unix build scripts now work under LC_CTYPE=tr_TR - SvdB
 - Flush write buffer when doing a uio_fclose() after doing only
   uio_fwrite() operations. - SvdB
